NetworkPolicy/network-policy-db-server-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-server-netpol
  namespace: qa
spec:
  podSelector:
    matchLabels:
      type: db
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            type: backend
        namespaceSelector:
          matchExpressions:
            - key: ns
              operator: In
              values:
                - prod
                - default
    - ports:
      - protocol: TCP
        port: 3000
